[tool.poetry]
name = "kural"
version = "0.1.0"
description = ""
authors = ["Diego Lopes <djkakaroto@gmail.com>"]
readme = "README.md"
packages = [{include = "kural", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
kural = "kural.main:app"

[tool.pytest]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.poetry.group.dev.dependencies]  
pytest = "^8.3"
black = "*"
ruff = "*" 
isort = "*" 
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
